center-align scenario picker tab titles. bb issue 4/16

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -527,7 +527,8 @@ body#scenarios_index section#right section.scenarios {
       padding: 10px;
       width: 180px;
       float: left;
-      font-weight: bold; }
+      font-weight: bold;
+      text-align: center; }
       body#scenarios_index section#right section.scenarios nav.tabs a.scenario_tab_picker.active {
         background-color: #0b3378;
         color: white; }
