--- a/public/stylesheets/sass/_scenarios_index.sass
+++ b/public/stylesheets/sass/_scenarios_index.sass
@@ -43,6 +43,7 @@ body#scenarios_index
           width: 180px
           float: left
           font-weight: bold
+          text-align: center
           &.active
             background-color: #0B3378
             color: white
